# War3Bot

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.user.6f26aaa  MySQL.md  README.md  SRP3.md  SRP3Client.md  War3CRC.md  install.sh
bncsutil/: bncsutil.h  bsha1.cpp  bsha1.h  buffer.h  cdkeydecoder.cpp  cdkeydecoder.h  checkrevision.cpp  checkrevision.h  debug.h  decodekey.cpp  decodekey.h  file.cpp  file.h  gmp.h  keytables.h  libinfo.cpp  libinfo.h  mutil.h  nls.cpp  nls.h  oldauth.cpp  oldauth.h  pe.cpp  pe.h  sha1.cpp  sha1.h  stack.cpp  stack.h
config/: bots_abcd_part1_copy.json  bots_abcd_part2_copy.json  bots_auto_01.json  bots_auto_02.json  bots_auto_03.json  bots_auto_04.json  bots_auto_05.json  bots_auto_06.json  bots_auto_07.json  bots_auto_08.json  bots_auto_09.json  bots_auto_10.json  war3bot.ini  war3bot.service
debug/: War3Dialog_GAMEOVER_DISCONNECTED.md  War3Dialog_LIST.md  War3Dialog_NETERROR_JOINGAMENOTFOUND.md  War3Dialog_NETERROR_JOINGAMENOTFOUND_0x7.md  War3Dialog_NETERROR_JOINGAMENOTFOUND_0xC.md  War3Dialog_NETERROR_NOGAMESPECIFIED.md  War3GameUI_LOAD_FAILED.md  War3Map_PART_NOT_OK.md  War3Map_SIZE_0.md  War3Scripts_JASS.md  War3Server_MySQL.md
details/: W3X_Files_Format.md  War3Protocol.md
details/1.21/: GameDll_248A70_NetClientHandlePacket.md  GameDll_24B560_HandleAuthResponse.md
details/1.26/: GameDll_1.26_UI_Object_Factory_and_Hash_Registration.md  GameDll_360CD0_GameUI_Inventory_Slot_Inventory_Bar.md  GameDll_382150_GameUI_High_Level_Input_Handler.md  GameDll_39EE10_Map_Checksum_Calculate.md  GameDll_50B1A0_UI_Render_Queue_Manager_Batch_Draw.md  GameDll_549D90_Network_Event_BNET_Dispatcher.md  GameDll_549D90_Network_Event_Dispatcher_Loop.md  GameDll_549D90_Network_Event_W3GS_Dispatcher.md  GameDll_551D80_CheckSum.md  GameDll_55DBE0_ListBoxWar3_ScrollPosition_Calculate.md  GameDll_560E80_GameUI_Slot_Data_Dispatcher.md  GameDll_591CA0_Select_Room_List_Item.md  GameDll_5B6E30_MainMenu_Event_Dispatch.md  GameDll_5BB910_BattleNet_User_Event_Dispatch.md  GameDll_5BC6A0_GameUI_Sanitizer_Dispatcher.md  GameDll_5BE710_CustomGame_StatString_Parse.md  GameDll_5BE710_Game_StatString_Parse.md  GameDll_5BE710_Game_State_String_Parse.md  GameDll_650820_CustomGame_StatString_Decode.md  GameDll_650820_Game_StatString_Decode.md  GameDll_650820_Game_State_String_Decode.md  GameDll_653B40_Map_Part_Standard_CRC32_Calculate.md  GameDll_657930_CustomGame_CRC_Sha1_Compare.md  GameDll_66AB60_Packet_F7_45.md  GameDll_677870_Packet_F7_3A.md  GameDll_677970_Packet_F7_1D.md  GameDll_677970_Packet_F7_1E.md  GameDll_677970_Packet_F7_21.md  GameDll_677A70_Packet_F7_24.md  GameDll_67F930_W3GS_MAPPARTNOTOK.md  GameDll_682300_CustomGame_W3GSPacket_Dispatch.md  GameDll_7BDC60_GameUI_Text_Formatter_Color_Parser.md  GameDll__GameMain.txt  GameDll____9850_GameMain.md  Gamedll_591CA0_Select_Room_List_Item.md  Gamedll_591CA0_Select_Room_Listing_Item.md
details/1.26/CustomGame/: GameDll_0000000_CreateGame_And_JoinGame_Model.md  GameDll_591CA0_CustomGame_Room_List_Select.md  GameDll_5B6C30_CustomGame_Room_Chat_Event_Dispatch.md  GameDll_5B6C30_CustomGame_Room_Event_Dispatch.md  GameDll_5BA950_CustomGame_Create_Event_Dispatch.md  GameDll_5BABF0_CustomGame_Event_Dispatch.md  GameDll_5BABF0_CustomGame_List_Event_Dispatch.md  GameDll_5BE710_CustomGame_StatString_Parse.md  GameDll_650820_CustomGame_StatString_Decode.md  GameDll_657930_CustomGame_CRC_Sha1_Compare.md  GameDll_672340_LocalNetwork_Game_Event_Dispatch.md  GameDll_682300_CustomGame_W3GSPacket_Dispatch.md
details/1.26/Lobby/: GameDll_5BB2A0_Lobby_Event_Dispatch.md
docs/: Host_Model_VS_Join_Model.html  W3X_Files_Format.html  index.html
docs/W3X_Files_Format_files/: css
events/: War3EventDispatch_CustomGame.md
include/: bigint.h  bitrotate.h  bnetbot.h  bnetconnection.h  bnethash.h  bnetsrp3.h  bot.h  botmanager.h  calculate.h  client.h  command.h  databasemanager.h  dbmanager.h  gamesession.h  ingame.h  logger.h  netmanager.h  networkdiagnostic.h  p2pserver.h  p2psession.h  protocol.h  securitywatchdog.h  stunclient.h  stunclientmanager.h  w3gs_protocol.h  war3bot.h  war3map.h
lib/include/: StormLib.h
lib/mingw/gmp/include/: gmp.h
lib/msvc/gmp/include/: gmp.h
markdown/: MySQL.md  War3Server_GDB.md
src/: bigint.cpp  bnetbot.cpp  bnetconnection.cpp  bnethash.cpp  bnetsrp3.cpp  bot.cpp  botmanager.cpp  calculate.cpp  client.cpp  command.cpp  databasemanager.cpp  dbmanager.cpp  gamesession.cpp  logger.cpp  main.cpp  netmanager.cpp  networkdiagnostic.cpp  p2pserver.cpp  p2psession.cpp  securitywatchdog.cpp  stunclient.cpp  stunclientmanager.cpp  w3gs_protocol.cpp  war3bot.cpp  war3map.cpp
test/: network_conection.py  tcp.py
updates/: DebugConfig.ini  GameConfig.ini  version.py
updates/translations/: War3Launcher_ar.qm  War3Launcher_bg.qm  War3Launcher_ca.qm  War3Launcher_cs.qm  War3Launcher_da.qm  War3Launcher_de.qm  War3Launcher_en.qm  War3Launcher_es.qm  War3Launcher_fi.qm  War3Launcher_fr.qm  War3Launcher_gd.qm  War3Launcher_he.qm  War3Launcher_hu.qm  War3Launcher_it.qm  War3Launcher_ja.qm  War3Launcher_ko.qm  War3Launcher_lv.qm  War3Launcher_pl.qm  War3Launcher_pt.qm  War3Launcher_ru.qm  War3Launcher_sk.qm  War3Launcher_tr.qm  War3Launcher_uk.qm  War3Launcher_zh_CN.qm  War3Launcher_zh_TW.qm
updates/war3files/crc/3AEBCEF3/: hash_log.txt  verify.py
web_files/W3X_Files_Format_files/: main.css  md.css
